change modal's display

--- a/index.html
+++ b/index.html
@@ -199,8 +199,12 @@
                                     </h3>
 
                                     <ul class="header__search-history-list">
-                                        <li class="header__search-history-item">Tìm kiếm 1</li>
-                                        <li class="header__search-history-item">Tìm kiếm 2</li>
+                                        <li class="header__search-history-item">
+                                            Tìm kiếm 1
+                                        </li>
+                                        <li class="header__search-history-item">
+                                            Tìm kiếm 2
+                                        </li>
                                     </ul>
                                 </div>
                             </div>
@@ -242,11 +246,12 @@
             <footer class="footer"></footer>
         </div>
 
-        <!-- <div class="modal">
+        <div class="modal">
             <div class="modal__overlay"></div>
 
+            <!-- Sign up -->
             <div class="modal__body">
-                <div class="auth-form">
+                <div class="auth-form sign-up-modal">
                     <div class="auth-form__container">
                         <div class="auth-form__header">
                             <h3 class="auth-form__heading">Đăng ký</h3>
@@ -317,7 +322,8 @@
                     </div>
                 </div>
 
-                <div class="auth-form">
+                <!-- Sign in -->
+                <div class="auth-form sign-in-modal">
                     <div class="auth-form__container">
                         <div class="auth-form__header">
                             <h3 class="auth-form__heading">Đăng nhập</h3>
@@ -383,6 +389,6 @@
                     </div>
                 </div>
             </div>
-        </div> -->
+        </div>
     </body>
 </html>
