--- a/index.html
+++ b/index.html
@@ -152,8 +152,9 @@
                                     Trợ giúp
                                 </a>
                             </li>
-                            <!-- <li
+                            <li
                                 class="header__navbar-item header__navbar-item--separate"
+                                id="navbar-sign-up"
                             >
                                 <a
                                     href="#"
@@ -162,15 +163,18 @@
                                     Đăng ký
                                 </a>
                             </li>
-                            <li class="header__navbar-item">
+                            <li class="header__navbar-item" id="navbar-sign-in">
                                 <a
                                     href="#"
                                     class="header__navbar-item-link header__navbar-item-link--strong"
                                 >
                                     Đăng nhập
                                 </a>
-                            </li> -->
-                            <li class="header__navbar-item header__navbar-user">
+                            </li>
+                            <li
+                                class="header__navbar-item header__navbar-user"
+                                id="navbar-user"
+                            >
                                 <img
                                     src="./assests/img/Photos.png"
                                     alt="header__navbar-user-avatar"
@@ -386,7 +390,31 @@
                 </div>
             </header>
 
-            <div class="container"></div>
+            <div class="container">
+                <nav class="category">
+                    <h3 class="category__heading">
+                        <i class="fas fa-list"></i>
+                        Danh mục
+                    </h3>
+                    <ul class="category-list">
+                        <li class="category-item category--active">
+                            <a href="#" class="category-item__link">
+                                Trang điểm tai
+                            </a>
+                        </li>
+                        <li class="category-item">
+                            <a href="#" class="category-item__link">
+                                Trang điểm mũi
+                            </a>
+                        </li>
+                        <li class="category-item">
+                            <a href="#" class="category-item__link">
+                                Trang điểm họng
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
 
             <footer class="footer"></footer>
         </div>
