--- a/index.html
+++ b/index.html
@@ -390,30 +390,99 @@
                 </div>
             </header>
 
-            <div class="container">
-                <nav class="category">
-                    <h3 class="category__heading">
-                        <i class="fas fa-list"></i>
-                        Danh mục
-                    </h3>
-                    <ul class="category-list">
-                        <li class="category-item category--active">
-                            <a href="#" class="category-item__link">
-                                Trang điểm tai
-                            </a>
-                        </li>
-                        <li class="category-item">
-                            <a href="#" class="category-item__link">
-                                Trang điểm mũi
-                            </a>
-                        </li>
-                        <li class="category-item">
-                            <a href="#" class="category-item__link">
-                                Trang điểm họng
-                            </a>
-                        </li>
-                    </ul>
-                </nav>
+            <div class="wrapper__container">
+                <div class="grid">
+                    <div class="grid__row padding-top">
+                        <div class="grid__column-2">
+                            <nav class="category">
+                                <h3 class="category__heading">
+                                    <i
+                                        class="fas fa-list category__heading-icon"
+                                    ></i>
+                                    Danh mục
+                                </h3>
+                                <ul class="category-list">
+                                    <li
+                                        class="category-item category-item--active"
+                                    >
+                                        <a href="#" class="category-item__link">
+                                            Trang điểm tai
+                                        </a>
+                                    </li>
+                                    <li class="category-item">
+                                        <a href="#" class="category-item__link">
+                                            Trang điểm mũi
+                                        </a>
+                                    </li>
+                                    <li class="category-item">
+                                        <a href="#" class="category-item__link">
+                                            Trang điểm họng
+                                        </a>
+                                    </li>
+                                </ul>
+                            </nav>
+                        </div>
+
+                        <div class="grid__column-10">
+                            <div class="home-filter">
+                                <span class="home-filter__label">
+                                    Sắp xếp theo
+                                </span>
+                                <button class="btn home-filter__btn">
+                                    Phổ biến
+                                </button>
+                                <button
+                                    class="btn btn--primary home-filter__btn"
+                                >
+                                    Mới nhất
+                                </button>
+                                <button class="btn home-filter__btn">
+                                    Bán chạy
+                                </button>
+
+                                <div class="select-input">
+                                    <span class="select-input__label">Giá</span>
+                                    <i class="fas fa-angle-down"></i>
+
+                                    <ul class="select-input__list">
+                                        <li class="select-input__item">
+                                            <a href="#">Giá: Thấp đến cao</a>
+                                        </li>
+                                        <li class="select-input__item">
+                                            <a href="#">Giá: Cao đến thấp</a>
+                                        </li>
+                                    </ul>
+                                </div>
+
+                                <div class="home-filter__page">
+                                    <span class="home-filter__page-number">
+                                        <span class="home-filter__page-current">
+                                            1
+                                        </span>
+                                        /
+                                        <span class="home-filter__page-total">
+                                            14
+                                        </span>
+                                    </span>
+                                    <div class="home-filter__page-control">
+                                        <a
+                                            href="#"
+                                            class="home-filter-page-btn home-filter-page-btn--disabled"
+                                        >
+                                            <i class="fas fa-angle-left"></i>
+                                        </a>
+                                        <a
+                                            href="#"
+                                            class="home-filter-page-btn"
+                                        >
+                                            <i class="fas fa-angle-right"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <footer class="footer"></footer>
